services/schedule-api/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schedule-api-ingress
  namespace: prof-test-apps
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.test.prof-stankin.ru
      secretName: schedule-api-tls
  rules:
    - host: api.test.prof-stankin.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: schedule-api-svc
                port:
                  number: 80
